src/Home.css
*{
    box-sizing: border-box;
    font-family: 'Dosis', sans-serif;
}
@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');



li{
list-style: none;
flex-direction: row;
margin-left: 1vw;
}

.top_section{
    height: 12vh;
    width: 100vw;
    background-color: rgb(3, 17, 42);
    border: solid 2px;
    display: flex;
    flex-direction: row;
    border-bottom-color: brown;
    border-bottom-width: 4px;
}

.logo{
    font-size: 50px;
    font-weight: bold;
    width: 30vw;
    color: rgb(30, 245, 30);
    margin-left: 1vw;
}

.navlist{
    display: flex;
    flex-direction: row;
    list-style: none;
    width: 75px;
    height: 30px;
    margin-top: 4vh;
    margin-left: 30vw;
    color: cornsilk;
    font-size: large;
}

#signin{
    height: 44px;
    margin-top: 2vh;
    border-radius: 20px;
    width: 100px;
    margin-left: 15vw;
    color: rgb(3, 17, 42);
    font-weight: 900;
    letter-spacing: 1px;
    font-size: 20px;
    background-color: silver;
}

.moreOptions{
    width: 100vw;
    background-color: rgb(240, 240, 240);
    height: 10vh;
    display: flex;
    flex-direction: row;
    color: brown;
}

.navListTwo{
    display: flex;
    flex-direction: row;
    width: 80vw;
    font-size: 20px;
}

.navListTwo li{
    margin-right: 2vw;
}

.secondOptionstab{
    width: 100vw;
    background-color: rgb(255, 255, 255);
    height: 9vh;
}


.bodysection{
    height: 69vh;
    background-image: url("../public/basicbankfamily3.jpg");
    background-repeat: no-repeat;
    background-position-x: right;
    background-position-y: bottom;
    background-color: rgb(30, 245, 30);
    background-blend-mode: var(#ba8c43);
    background-image: radial-gradient();
    background-blend-mode: screen;
    opacity: 90%;
}

.hero{
    margin-top: 5vh;
    font-size: xx-large;
    color: rgb(113, 82, 3);
    text-align: center;
}

#midsection{
    display: flex;
    flex-direction: column;
    border: solid 2px orange;
    height: 80vh;
    width: 85vw;
    margin-left: 5vw;
    text-align: center;
}

#midsectionmenus{
    display: flex;
}

.accountsection{
    background-color: wheat;
    flex-direction: row;
    margin-top: 4vh;
    margin-left: 1vw;
    width: 40vw;
    height: 65vh;
    border: solid 2px orange;
}

.uselessList{
    list-style: none;
}

.infosection{
    flex-direction: row;
    margin-top: 4vh;
    margin-left: 1vw;
    width: 35vw;
    height: 65vh;
    border: solid 2px orange;
}

